<?php
use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;
return new class extends Migration
{
/**
* Run the migrations.
*/
public function up(): void
{
Schema::create('users', function (Blueprint $table) {
$table->id();
$table->string('name');
$table->string('email')->unique();
$table->timestamp('email_verified_at')->nullable();
$table->string('password');
$table->rememberToken();
$table->string('google_id')->nullable();
$table->string('google_token')->nullable();
$table->enum('role', ['customer', 'admin'])->default('customer'); // Changed to enum
$table->string('phone_number')->nullable();
$table->softDeletes();
$table->timestamps();
});
} 
/**
 * Reverse the migrations.
 */
public function down(): void
{
    Schema::dropIfExists('users');
}
 
};
